Clarify director's resignation in reports

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                         percibido como autocrático" y el "deterioro del clima organizacional".</p>
                         <div class="success-box" style="margin-top: 1rem;">
                             <strong>✓ LOGRO:</strong> Esta intervención y la presión del estamento docente resultaron en el retiro 
-                            del cargo del director de la Escuela, logrando una mejora en el clima laboral.
+                            del cargo (renuncia) del director de la Escuela, logrando una mejora en el clima laboral.
                         </div>
                     </div>
                 </div>
@@ -627,7 +627,8 @@
                         <h4 style="font-weight: 700; margin: 1rem 0 0.5rem 0;">Denuncia de Incumplimiento de Acuerdos</h4>
                         <p><strong>Comunicado N.º 002:</strong> Se denuncia públicamente que, violando el compromiso de la Asamblea, 
                         la administración de la Sede agenda reuniones clave sobre la FCHS y el Plan Integral de Cobertura (PIC) con 
-                        el Vicerrector General, excluyendo explícitamente a la Representación Profesoral.</p>
+                        el Vicerrector General, excluyendo explícitamente a la Representación Profesoral de sede, a pesar de la solicitud
+                            de participación en el espacio.</p>
                     </div>
                 </div>
 
@@ -763,8 +764,9 @@
                         <h4 style="font-weight: 700; margin: 1rem 0 0.5rem 0;">Exigencia de Responsabilidad Penal</h4>
                         <p><strong>Petición REP.PROF.027-2025:</strong> Petición a la Vicerrectora exigiendo que la Sede impulse 
                         eficazmente las denuncias penales por la toma de 2024.</p>
-                        <p>Se señala que la administración se reunió con los "delegados de la toma" y, por tanto, conoce sus 
-                        identidades, por lo que la denuncia contra "indeterminados" es insuficiente.</p>
+                        <p>Se señala que la administración se reunió con los "delegados de la toma" y, por lo tanto, existen mecanismos
+                            y acciones que se podrían adelantar para la identificación de los implicados, por lo que la denuncia contra
+                            "indeterminados" es insuficiente, además de la falta de impulso procesal de las denuncias.</p>
                     </div>
                 </div>
 
@@ -839,8 +841,8 @@
                 </div>
 
                 <div class="success-box">
-                    <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">✓ 2. Retiro del Director de la Escuela de Arquitectura</h3>
-                    <p>La intervención y la presión del estamento docente resultaron en el retiro del cargo del director de la 
+                    <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">✓ 2. Retiro (renuncia) del Director de la Escuela de Arquitectura</h3>
+                    <p>La intervención y la presión del estamento docente resultaron en el retiro (renuncia) del cargo del director de la 
                     Escuela, logrando una mejora en el clima laboral ante denuncias de un estilo de dirección autocrático.</p>
                 </div>
 
