--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                         <span class="stat-label">Peticiones, Oficios y<br>Solicitudes Formales</span>
                     </div>
                     <div class="stat-box">
-                        <span class="stat-number">7</span>
+                        <span class="stat-number">10</span>
                         <span class="stat-label">Comunicados<br>Públicos</span>
                     </div>
                     <div class="stat-box">
@@ -584,7 +584,7 @@
                         del profesor que posteriormente sería nombrado Decano de la nueva FCHS.</p>
                         <div class="danger-box" style="margin-top: 1rem;">
                             <strong>Resultado:</strong> La Vicerrectoría de Sede no da respuesta ni trámite a la denuncia, situación 
-                            que se agrava con el posterior nombramiento del profesor.
+                            que se agrava con el posterior nombramiento del profesor como Decano ad hoc de la FCHS.
                         </div>
                     </div>
                 </div>
@@ -764,7 +764,7 @@
                         <h4 style="font-weight: 700; margin: 1rem 0 0.5rem 0;">Exigencia de Responsabilidad Penal</h4>
                         <p><strong>Petición REP.PROF.027-2025:</strong> Petición a la Vicerrectora exigiendo que la Sede impulse 
                         eficazmente las denuncias penales por la toma de 2024.</p>
-                        <p>Se señala que la administración se reunió con los "delegados de la toma" y, por lo tanto, existen mecanismos
+                        <p>Se señala que la administración se reunió con los </strong>"delegados de la toma"<strong>  y, por lo tanto, </strong>existen mecanismos
                             y acciones que se podrían adelantar para la identificación de los implicados, por lo que la denuncia contra
                             "indeterminados" es insuficiente, además de la falta de impulso procesal de las denuncias.</p>
                     </div>
@@ -867,7 +867,9 @@
                 <div class="success-box">
                     <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">✓ 6. Separación de los Cargos de DAMA y DIMA</h3>
                     <p>Como resultado directo de la veeduría constante, las tutelas ganadas que evidenciaron gestión ineficiente 
-                    y falta de transparencia, y la presión pública, los directores de DAMA y DIMA fueron separados de sus cargos.</p>
+                    y falta de transparencia, y la presión pública, los directores de DAMA y DIMA fueron separados de sus cargos.
+                    Los nuevos profesores que asumen el cargo cuentan con la idoneidad necesaria para la mejora de la situación 
+                    académico-administrativa de la Sede.</p>
                 </div>
 
                 <div class="highlight-box" style="margin-top: 3rem;">
@@ -991,7 +993,7 @@
                 <div class="info-box">
                     <h4 style="font-weight: 700; margin-bottom: 1rem;">Caso Toma 2024</h4>
                     <ul class="styled-list">
-                        <li>Tras los graves daños y hurtos ($35 millones), la administración interpuso denuncias contra "indeterminados"</li>
+                        <li>Tras los graves daños y hurtos ocurridos en la toma, la administración interpuso denuncias contra "indeterminados"</li>
                         <li>Se exigió ampliar la denuncia, dado que la administración conoce la identidad de los responsables</li>
                         <li>En el Consejo de Sede del 24 de septiembre, al manifestar el "temor generalizado" de la comunidad, 
                         la Vicerrectora respondió de forma intimidante</li>
@@ -1056,14 +1058,19 @@
                     <div class="proceso-title">4. Seguimiento a la sostenibilidad de la FCHS</div>
                     <div class="proceso-status">VALIDACIÓN DE VEEDURÍA</div>
                     <p>Monitoreo de los concursos docentes y desarrollo de la nueva facultad.</p>
-                    <p style="margin-top: 0.5rem;"><strong>Estado Actual:</strong> Los concursos se encuentran congelados por 
-                    falta de los PEP de las dos carreras nuevas, tal como advirtió la Representación en febrero.</p>
+                    <p style="margin-top: 0.5rem;"><strong>Estado Actual:</strong> Los concursos se congelaron por  
+                    falta de los PEP de las dos carreras nuevas, tal como advirtió la Representación en febrero.
+                    Volvieron a abrirse y se encuentran en curso actualmente - es necesario hacer hincapié en los 
+                    cambios de dedicación ocurridos por el traslado del Decano de la FCHS de unidad académica a la 
+                    carrera de ciencias políticas mediante el uso de uno de los ETC disponibles para el concurso 
+                    profesoral.</strong>Los estudiantes del pregrado en Gestión Cultural y Comunicativa han realizado
+                    convocatorias a asambleas alertando el posible riesgo de cierre de la carrera <strong></p>
                 </div>
 
                 <div class="proceso-item">
                     <div class="proceso-title">5. Veeduría sobre denuncias penales de la Toma 2024</div>
                     <div class="proceso-status">EN SEGUIMIENTO</div>
-                    <p>Seguimiento a los procesos penales por hurto y daño en bien público ($35 millones).</p>
+                    <p>Seguimiento a los procesos penales por hurto y daño en bien público .</p>
                     <p style="margin-top: 0.5rem;"><strong>NUNC:</strong> 170016000256202415970 y 170016000256202413807</p>
                     <p style="margin-top: 0.5rem;"><strong>Exigencia:</strong> Que la administración amplíe la denuncia e identifique 
                     a los responsables conocidos.</p>
