Update 'Logros' to 'Resultados' throughout document

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         <div class="nav">
             <button class="nav-btn active" onclick="showSection('resumen', this)">Resumen Ejecutivo</button>
             <button class="nav-btn" onclick="showSection('timeline', this)">Línea de Tiempo Completa</button>
-            <button class="nav-btn" onclick="showSection('logros', this)">Logros y Victorias</button>
+            <button class="nav-btn" onclick="showSection('logros', this)">Logros y Resultados</button>
             <button class="nav-btn" onclick="showSection('analisis', this)">Análisis de Situación</button>
             <button class="nav-btn" onclick="showSection('procesos', this)">Procesos en Seguimiento</button>
             <button class="nav-btn" onclick="showSection('conclusiones', this)">Conclusiones</button>
@@ -527,7 +527,7 @@
                 <div class="stats-grid">
                     <div class="stat-box" style="background: linear-gradient(135deg, #466b3f 0%, #1a3020 100%);">
                         <span class="stat-number">6</span>
-                        <span class="stat-label">Victorias y<br>Logros Concretos</span>
+                        <span class="stat-label">Logros y<br>Resultados Concretos</span>
                     </div>
                     <div class="stat-box" style="background: linear-gradient(135deg, #94b43b 0%, #7a9530 100%); color: #1a3020;">
                         <span class="stat-number" style="color: #1a3020;">6</span>
@@ -615,8 +615,8 @@
                         <p><strong>Motivo:</strong> Se denuncian quejas del cuerpo docente sobre un "estilo de dirección que es 
                         percibido como autocrático" y el "deterioro del clima organizacional".</p>
                         <div class="success-box" style="margin-top: 1rem;">
-                            <strong>✓ LOGRO:</strong> Esta intervención y la presión del estamento docente resultaron en el retiro 
-                            del cargo (renuncia) del director de la Escuela, logrando una mejora en el clima laboral.
+                            <strong>✓ RESULTADO:</strong> Esta intervención y la manifestación de las inquietudes del estamento docente expusieron situaciones que se habrían sumado a los motivos para 
+                            el retiro del cargo (renuncia) del director de la Escuela, coincidiendo con una mejora en el clima laboral.
                         </div>
                     </div>
                 </div>
@@ -733,8 +733,8 @@
                 <div class="timeline-item">
                     <div class="timeline-date">26 de mayo de 2025</div>
                     <div class="timeline-content">
-                        <span class="badge logro-badge">VICTORIA JUDICIAL</span>
-                        <h4 style="font-weight: 700; margin: 1rem 0 0.5rem 0;">Victoria en Tutela 1</h4>
+                        <span class="badge logro-badge">FALLO FAVORABLE</span>
+                        <h4 style="font-weight: 700; margin: 1rem 0 0.5rem 0;">Fallo a Favor en Tutela 1</h4>
                         <p><strong>Sentencia 117</strong> - Juzgado Tercero Municipal de Pequeñas Causas Laborales</p>
                         <div class="success-box" style="margin-top: 1rem;">
                             <strong>AMPARO:</strong> Se AMPARA el derecho fundamental de petición de la Rep. Iveth Katherine Collazos.<br>
@@ -770,8 +770,8 @@
                 <div class="timeline-item">
                     <div class="timeline-date">20 de junio de 2025</div>
                     <div class="timeline-content">
-                        <span class="badge logro-badge">VICTORIA JUDICIAL</span>
-                        <h4 style="font-weight: 700; margin: 1rem 0 0.5rem 0;">Victoria en Tutela 2</h4>
+                        <span class="badge logro-badge">FALLO FAVORABLE</span>
+                        <h4 style="font-weight: 700; margin: 1rem 0 0.5rem 0;">Fallo a Favor en Tutela 2</h4>
                         <p><strong>Sentencia 132</strong> - Juzgado Cuarto Penal Municipal</p>
                         <div class="success-box" style="margin-top: 1rem;">
                             <strong>AMPARO:</strong> Se AMPARA el derecho fundamental de petición de las representantes.<br>
@@ -866,21 +866,20 @@
                         <span class="badge logro-badge">RESULTADO DE VEEDURÍA</span>
                         <h4 style="font-weight: 700; margin: 1rem 0 0.5rem 0;">Separación de Cargos DAMA y DIMA</h4>
                         <div class="success-box" style="margin-top: 1rem;">
-                            <strong>✓ LOGRO:</strong> Como resultado de la veeduría constante, las tutelas ganadas y la presión 
-                            pública y administrativa, la Prof. Norma Liliana Ruiz (DAMA) y el Prof. Sandro Baez (DIMA) fueron 
-                            separados de sus cargos. Esto valida las denuncias de la Representación y se considera un logro directo 
-                            de la veeduría profesoral.
+                            <strong>✓ RESULTADO:</strong> Las acciones de veeduría constante, los fallos de tutela que evidenciaron gestión ineficiente y la presión pública, 
+                            habrían evidenciado falencias críticas que se sumaron a los motivos para que la Prof. Norma Liliana Ruiz (DAMA) y el Prof. Sandro Baez (DIMA) fueran 
+                            separados de sus cargos. Esto valida las denuncias de la Representación sobre la necesidad de mejoras en la gestión.
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- LOGROS Y VICTORIAS -->
+            <!-- LOGROS Y RESULTADOS -->
             <div id="logros" class="section">
-                <h2 class="section-title">Victorias y Logros Concretos</h2>
+                <h2 class="section-title">Logros y Resultados Concretos</h2>
                 
                 <p style="font-size: 1.1rem; margin-bottom: 2rem;">
-                    La veeduría directa y la presión legal y administrativa resultaron en seis logros concretos que beneficiaron 
+                    La veeduría directa y la presión legal y administrativa produjeron seis resultados concretos que beneficiaron 
                     directamente al profesorado y fortalecieron la transparencia institucional:
                 </p>
 
@@ -892,8 +891,8 @@
 
                 <div class="success-box">
                     <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">✓ 2. Retiro (renuncia) del Director de la Escuela de Arquitectura</h3>
-                    <p>La intervención y la presión del estamento docente resultaron en el retiro (renuncia) del cargo del director de la 
-                    Escuela, logrando una mejora en el clima laboral ante denuncias de un estilo de dirección autocrático.</p>
+                    <p>La intervención de la representación y la presión del estamento docente evidenciaron una situación crítica que habría contribuido al contexto 
+                    del retiro (renuncia) del cargo del director de la Escuela, facilitando una mejora en el clima laboral.</p>
                 </div>
 
                 <div class="success-box">
@@ -903,21 +902,21 @@
                 </div>
 
                 <div class="success-box">
-                    <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">✓ 4. Victoria Judicial en Tutela 1 (vs DAMA)</h3>
+                    <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">✓ 4. Fallo a Favor en Tutela 1 (vs DAMA)</h3>
                     <p><strong>Sentencia 117 - 26 de mayo de 2025:</strong> El Juzgado Tercero Municipal de Pequeñas Causas Laborales 
                     AMPARÓ el derecho de petición por ocultamiento de información por parte de la Directora Académica.</p>
                 </div>
 
                 <div class="success-box">
-                    <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">✓ 5. Victoria Judicial en Tutela 2 (vs DIMA)</h3>
+                    <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">✓ 5. Fallo a Favor en Tutela 2 (vs DIMA)</h3>
                     <p><strong>Sentencia 132 - 20 de junio de 2025:</strong> El Juzgado Cuarto Penal Municipal AMPARÓ el derecho 
                     de petición por respuestas evasivas del Director de Investigación.</p>
                 </div>
 
                 <div class="success-box">
                     <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">✓ 6. Separación de los Cargos de DAMA y DIMA</h3>
-                    <p>Como resultado directo de la veeduría constante, las tutelas ganadas que evidenciaron gestión ineficiente 
-                    y falta de transparencia, y la presión pública, los directores de DAMA y DIMA fueron separados de sus cargos.
+                    <p>Los hallazgos de la veeduría constante y los fallos de tutela que demostraron falta de transparencia habrían 
+                    precipitado la decisión administrativa de separar de sus cargos a los directores de DAMA y DIMA. 
                     Los nuevos profesores que asumen el cargo cuentan con la idoneidad necesaria para la mejora de la situación 
                     académico-administrativa de la Sede.</p>
                 </div>
@@ -1160,7 +1159,7 @@
                     </div>
                     <div class="stat-box" style="background: linear-gradient(135deg, #466b3f 0%, #1a3020 100%);">
                         <span class="stat-number">6</span>
-                        <span class="stat-label">Victorias<br>Concretas</span>
+                        <span class="stat-label">Logros<br>Concretos</span>
                     </div>
                     <div class="stat-box" style="background: linear-gradient(135deg, #94b43b 0%, #7a9530 100%); color: #1a3020;">
                         <span class="stat-number" style="color: #1a3020;">6</span>
@@ -1188,8 +1187,8 @@
                     violó derechos fundamentales.</p>
                     <p style="margin-top: 1rem;">Esta validación judicial no solo reivindica la labor de veeduría, sino que 
                     establece un precedente jurídico que obliga a la administración a modificar sus prácticas. El hecho de que 
-                    ambos directores (DAMA y DIMA) fueran separados de sus cargos tras estas acciones confirma la gravedad de 
-                    las irregularidades detectadas.</p>
+                    ambos directores (DAMA y DIMA) fueran separados de sus cargos tras estas acciones coincide con las irregularidades evidenciadas 
+                    y refuerza la gravedad de las alertas emitidas.</p>
                 </div>
 
                 <div class="info-box">
@@ -1248,7 +1247,7 @@
 
                 <div class="success-box">
                     <h4 style="font-weight: 700; margin-bottom: 1rem;">1. La Persistencia da Resultados</h4>
-                    <p>Las seis victorias concretas demuestran que la veeduría rigurosa y persistente produce cambios tangibles. 
+                    <p>Los seis logros concretos demuestran que la veeduría rigurosa y persistente produce cambios tangibles. 
                     El cierre de la mesa de PTA, la apertura de los proyectos de investigación de FIA, las victorias judiciales 
                     y la separación de los directores de DAMA y DIMA son evidencia de que el ejercicio responsable de la 
                     representación transforma realidades.</p>
@@ -1369,9 +1368,9 @@
                         de los recursos públicos no es una opción, es una obligación constitucional.
                     </p>
                     <p style="font-size: 1.15rem; line-height: 1.9; margin-bottom: 1.5rem;">
-                        Las <strong>seis victorias concretas</strong> obtenidas demuestran que cuando la representación se ejerce 
+                        Los <strong>seis logros concretos</strong> obtenidos demuestran que cuando la representación se ejerce 
                         con rigor, persistencia y fundamentación, se producen cambios reales que benefician al estamento y a la 
-                        institución. Cada proyecto de investigación desbloqueado, cada director removido por mal desempeño, cada 
+                        institución. Cada proyecto de investigación desbloqueado, cada director removido tras evidenciarse irregularidades, cada 
                         tutela ganada, es una reivindicación del poder de la veeduría ciudadana dentro de la universidad.
                     </p>
                     <p style="font-size: 1.15rem; line-height: 1.9; margin-bottom: 1.5rem;">
